# enc_extract_lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  US5NY1BF.000  clip.py  environment.yml  merge.py  package.xml  setup.py  test.py
backup/: US5NY1BG.000  US5NYCCF.000  US5NYCCG.000  US5NYCDF.000  US5NYCEG.000
clip/: clip.dbf
clipSection/: clipSection.dbf  clipSection.shp  clipSection.shx
data/: check_db.sqlite
databases/: lookup_db.sqlite
extractedPolygons/: CAUTION.dbf  CAUTION.shp  CAUTION.shx  CAUTION_DISSOLVED.dbf  CAUTION_DISSOLVED.shp  CAUTION_DISSOLVED.shx  COLLISION.dbf  COLLISION.shp  COLLISION.shx  COLLISION_DISSOLVED.dbf  COLLISION_DISSOLVED.shp  COLLISION_DISSOLVED.shx
include/enc_extraction/: enc_extract_lib.h
ingest/: readme.md
mergedHazards/: mergedHazards.dbf  mergedHazards.shp  mergedHazards.shx
mergedHazardsDissolved/: mergedHazardsDissolved.dbf  mergedHazardsDissolved.shp  mergedHazardsDissolved.shx
pointHazards/: pointHazards.dbf  pointHazards.shp  pointHazards.shx
polyHazards/: polyHazards.dbf  polyHazards.shp  polyHazards.shx
polyHazardsDissolved/buffered/: polyHazardsDissolved.dbf  polyHazardsDissolved.shp  polyHazardsDissolved.shx
polyHazardsDissolved/normal/: polyHazardsDissolved.dbf  polyHazardsDissolved.shp  (+1 more)
registered/: US5NY1BE.000  US5NYCBG.000  US5NYCBH.000  US5NYCDG.000  US5NYCEF.000  index.txt
scripts/: extract.py  ingest.py
src/: dev_enc_lookup_db.py  dissolve.py  enc_extract_lib.cpp  extract.py  ingest.py  merge.py  merge_v2.py  test.py  test_db.py  test_enc_extraction.cpp  testing.py
